--- a/ToDoList/Todolist.html
+++ b/ToDoList/Todolist.html
@@ -5,27 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="main.js"></script>
-    <script type="stylesheet" src="main.js"></script>
+    <script type="text/javascript" src="Script.js"></script>
     <link type="text/css" rel="stylesheet" href="main.css">
-    <title>  To do list </title>
+    <title> Liste des choses a faire </title>
 </head>
 
 <body>
     <div id="myDIV" class="header">
-        <h2> Liste de choses a faire</h2>
-        <input type="text" id="myInput" placeholder="Title...">
-        <span onclick="newElement()" class="addBtn">Ajouter</span>
+        <h2> Liste de choses a faire </h2>
+        <input type="text" id="myInput" placeholder="Ecrit ici...">
+        <span onclick="newElement()" class="addBtn"> Ajouter </span>
     </div>
 
     <ul id="myUL">
-        <li>Aller a la salle de gym</li>
-        <li class="checked">Payer les factures</li>
-        <li>Rencontrer Bob</li>
-        <li>Acheter des oeufs</li>
-        <li>Lire un livre</li>
-        <li>Organiser le bureau</li>
+        <li> Finir le jeu Getting Over It à 100% </li>
+        <li class="checked"> Devenir ranked Challenger à League of Legends </li>
+        <li> Rencontrer Robert </li>
+        <li> Devenir partenaire Twitch </li>
+        <li> Concevoir un jeu vidéo </li>
+        <li> Atteindre un million de vues sur Twitch </li>
+        <li> Devenir joueur professionnel </li>
     </ul>
+
+    <script>
+        //Créez un bouton "fermer" et ajoutez-le à chaque élément de la liste
+        var myNodelist = document.getElementsByTagName("LI");
+        var i;
+        for (i = 0; i < myNodelist.length; i++) {
+            var span = document.createElement("SPAN");
+            var txt = document.createTextNode("\u00D7");
+            span.className = "close";
+            span.appendChild(txt);
+            myNodelist[i].appendChild(span);
+        }
+
+        // Cliquez sur un bouton de fermeture pour masquer l'élément de la liste actuel
+        var close = document.getElementsByClassName("close");
+        var i;
+        for (i = 0; i < close.length; i++) {
+            close[i].onclick = function () {
+                var div = this.parentElement;
+                div.style.display = "none";
+            }
+        }
+
+        // Ajouter un symbole "coché" lorsque vous cliquez sur un élément de la liste
+        var list = document.querySelector('ul');
+        list.addEventListener('click', function (ev) {
+            if (ev.target.tagName === 'LI') {
+                ev.target.classList.toggle('checked');
+            }
+        }, false);
+
+        // Créez un nouvel élément de liste en cliquant sur le bouton "Ajouter"
+        function newElement() {
+            var li = document.createElement("li");
+            var inputValue = document.getElementById("myInput").value;
+            var t = document.createTextNode(inputValue);
+            li.appendChild(t);
+            if (inputValue === '') {
+                alert("Vous devez écrire quelque chose !");
+            } else {
+                document.getElementById("myUL").appendChild(li);
+            }
+            document.getElementById("myInput").value = "";
+
+            var span = document.createElement("SPAN");
+            var txt = document.createTextNode("\u00D7");
+            span.className = "close";
+            span.appendChild(txt);
+            li.appendChild(span);
+
+            for (i = 0; i < close.length; i++) {
+                close[i].onclick = function () {
+                    var div = this.parentElement;
+                    div.style.display = "none";
+                }
+            }
+        }
+    </script>
 </body>
 
 </html>
