--- a/PierreFeuille/index.html
+++ b/PierreFeuille/index.html
@@ -17,6 +17,10 @@
     <p>Comput joue :</p>
     <p id="computer-joue"></p>
     <p id="qui-gagne"></p>
+    <p id="score"></p>
+    <p id="winner"></p>
+    <p>Total :</p>
+    <p id="total"></p>
 
     <script src="script.js"></script>
 </body>
