--- a/ToDoList/index.html
+++ b/ToDoList/index.html
@@ -8,7 +8,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bac à sable</title>
+  <title>Liste de choses à faire</title>
 
   <!-- <link href="./assets/bootstrap.css" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -20,7 +20,7 @@
 
   <div class="container">
 
-    <h1>Todo List</h1>
+    <h1>Liste de choses à faire</h1>
     <form>
       <input type="text" id="item" placeholder="À faire" autocomplete="off" minlength="2" />
     </form>  
