--- a/SelecteurAleatoire/index.html
+++ b/SelecteurAleatoire/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ondrop="refuseDrop(event)" ondragover="allowDrop(event)">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
     <div class="flex">
-        <div class="personne-choisi">
+        <div class="personne-chosen" ondrop="drop(event)" ondragover="allowDrop(event)">
             <h3>C'est au tour de : </h3>
             <h1 id="personne-choisi">La personne choisi est ...</h1>
         </div>
         <div class="li-not-passed">
             <h3>Les apprenants pas encore passés</h3>
             <p id="not-passed"></p>
+            <img src="https://pbs.twimg.com/profile_images/419586950018764800/gyfUrZ1v_400x400.jpeg" alt="Someone" class="apprenant" 
+            draggable="true" ondragstart="drag(event)" id="fgvsrfg">
         </div>
         <div class="div-btn-choisir">
             <button id = "btn-choisir">
@@ -30,4 +32,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
