--- a/SelecteurAleatoire/index.html
+++ b/SelecteurAleatoire/index.html
@@ -15,19 +15,16 @@
             <div id="div-personne-choisi" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
         <div class="li-not-passed" id="lapin">
-            <h3>Les apprenants pas encore passés</h3>
+            <h3>Les apprenants pas encore passés :</h3>
             <p id="not-passed"></p>
         </div>
         <div class="div-btn-choisir">
             <button id = "btn-choisir">
                 <p>Choisir aléatoirement un apprenant</p>
             </button>
-            <button id = "btn-ok">
-                <p>ok</p>
-            </button>
         </div>
         <div  class="li-not-passed">
-            <h3>Les apprenants déjà passés</h3>
+            <h3>Les apprenants déjà passés :</h3>
             <p id="passed"></p>
             <div id="personne-passee" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
